--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,5 +5,5 @@
 </main>
 {% endblock %}
 {% block javascripts %}
-    {{ encore_entry_script_tags('frontpage') }}
+    {{ encore_entry_script_tags('app') }}
 {% endblock %}
